// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`foo.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/*
 * @providesModule Foo
 */

=====================================output=====================================
/*
 * @providesModule Foo
 */

================================================================================
`;

exports[`test.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @flow
 */

require('Foo');

=====================================output=====================================
/**
 * @flow
 */

require("Foo");

================================================================================
`;
